[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threadx"
version = "0.1.0a1"
authors = [
  { name="Akshay Patel", email="akshaybishnoi@protonmail.com" },
]
description = "Chaining function calls on steroids"
readme = "README.md"
keywords = [
    "chain", 
    "chaining", 
    "threading", 
    "pipeline", 
    "pipe", 
    "function chaining", 
    "data transformation", 
    "functional programming", 
    "compose functions", 
    "clojure"
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/withjak/threadx"
Issues = "https://github.com/withjak/threadx/issues"